Refactor WEKA and MEKA instances initialization